parser.output
State 19 conflicts: 9 reduce/reduce
State 35 conflicts: 2 reduce/reduce
State 60 conflicts: 10 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: mainFunction

    2 mainFunction: type mainToken '(' funcParameters ')' block
    3             | type mainToken '(' ')' block

    4 type: intTypeToken
    5     | doubleTypeToken

    6 funcParameters: funcParameters ',' type idToken
    7               | type idToken

    8 block: '{' statements '}'

    9 statements: statements statement
   10           | statement

   11 statement: declaration ';'
   12          | listVars
   13          | idToken '=' expression ';'
   14          | expression ';'
   15          | returnToken expression ';'
   16          | ifToken '(' expression ')' block
   17          | ifToken '(' expression ')' block elseToken block

   18 declaration: type listVars

   19 listVars: listVars ',' idToken
   20         | idToken
   21         | expression
   22         | listVars ',' expression
   23         | listVars ',' idToken '=' expression
   24         | idToken '=' expression

   25 expression: expression '+' expression
   26           | expression '-' expression
   27           | expression '*' expression
   28           | expression '/' expression
   29           | expression '>' expression
   30           | expression '<' expression
   31           | expression gteqToken expression
   32           | expression lteqToken expression
   33           | expression eqToken expression
   34           | expression neqToken expression
   35           | idToken '(' funcCallArgs ')'
   36           | idToken
   37           | intToken
   38           | doubleToken

   39 funcCallArgs: funcCallArgs ',' expression
   40             | expression
   41             | %empty


Terminals, with rules where they appear

$end (0) 0
'(' (40) 2 3 16 17 35
')' (41) 2 3 16 17 35
'*' (42) 27
'+' (43) 25
',' (44) 6 19 22 23 39
'-' (45) 26
'/' (47) 28
';' (59) 11 13 14 15
'<' (60) 30
'=' (61) 13 23 24
'>' (62) 29
'{' (123) 8
'}' (125) 8
error (256)
intTypeToken (258) 4
doubleTypeToken (259) 5
mainToken (260) 2 3
returnToken (261) 15
ifToken (262) 16 17
elseToken (263) 17
gteqToken (264) 31
lteqToken (265) 32
eqToken (266) 33
neqToken (267) 34
idToken (268) 6 7 13 19 20 23 24 35 36
intToken (269) 37
doubleToken (270) 38


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
program (30)
    on left: 1, on right: 0
mainFunction (31)
    on left: 2 3, on right: 1
type (32)
    on left: 4 5, on right: 2 3 6 7 18
funcParameters (33)
    on left: 6 7, on right: 2 6
block (34)
    on left: 8, on right: 2 3 16 17
statements (35)
    on left: 9 10, on right: 8 9
statement (36)
    on left: 11 12 13 14 15 16 17, on right: 9 10
declaration (37)
    on left: 18, on right: 11
listVars (38)
    on left: 19 20 21 22 23 24, on right: 12 18 19 22 23
expression (39)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38, on right: 13
    14 15 16 17 21 22 23 24 25 26 27 28 29 30 31 32 33 34 39 40
funcCallArgs (40)
    on left: 39 40 41, on right: 35 39


State 0

    0 $accept: . program $end

    intTypeToken     shift, and go to state 1
    doubleTypeToken  shift, and go to state 2

    program       go to state 3
    mainFunction  go to state 4
    type          go to state 5


State 1

    4 type: intTypeToken .

    $default  reduce using rule 4 (type)


State 2

    5 type: doubleTypeToken .

    $default  reduce using rule 5 (type)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 6


State 4

    1 program: mainFunction .

    $default  reduce using rule 1 (program)


State 5

    2 mainFunction: type . mainToken '(' funcParameters ')' block
    3             | type . mainToken '(' ')' block

    mainToken  shift, and go to state 7


State 6

    0 $accept: program $end .

    $default  accept


State 7

    2 mainFunction: type mainToken . '(' funcParameters ')' block
    3             | type mainToken . '(' ')' block

    '('  shift, and go to state 8


State 8

    2 mainFunction: type mainToken '(' . funcParameters ')' block
    3             | type mainToken '(' . ')' block

    intTypeToken     shift, and go to state 1
    doubleTypeToken  shift, and go to state 2
    ')'              shift, and go to state 9

    type            go to state 10
    funcParameters  go to state 11


State 9

    3 mainFunction: type mainToken '(' ')' . block

    '{'  shift, and go to state 12

    block  go to state 13


State 10

    7 funcParameters: type . idToken

    idToken  shift, and go to state 14


State 11

    2 mainFunction: type mainToken '(' funcParameters . ')' block
    6 funcParameters: funcParameters . ',' type idToken

    ','  shift, and go to state 15
    ')'  shift, and go to state 16


State 12

    8 block: '{' . statements '}'

    intTypeToken     shift, and go to state 1
    doubleTypeToken  shift, and go to state 2
    returnToken      shift, and go to state 17
    ifToken          shift, and go to state 18
    idToken          shift, and go to state 19
    intToken         shift, and go to state 20
    doubleToken      shift, and go to state 21

    type         go to state 22
    statements   go to state 23
    statement    go to state 24
    declaration  go to state 25
    listVars     go to state 26
    expression   go to state 27


State 13

    3 mainFunction: type mainToken '(' ')' block .

    $default  reduce using rule 3 (mainFunction)


State 14

    7 funcParameters: type idToken .

    $default  reduce using rule 7 (funcParameters)


State 15

    6 funcParameters: funcParameters ',' . type idToken

    intTypeToken     shift, and go to state 1
    doubleTypeToken  shift, and go to state 2

    type  go to state 28


State 16

    2 mainFunction: type mainToken '(' funcParameters ')' . block

    '{'  shift, and go to state 12

    block  go to state 29


State 17

   15 statement: returnToken . expression ';'

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 31


State 18

   16 statement: ifToken . '(' expression ')' block
   17          | ifToken . '(' expression ')' block elseToken block

    '('  shift, and go to state 32


State 19

   13 statement: idToken . '=' expression ';'
   20 listVars: idToken .
   24         | idToken . '=' expression
   35 expression: idToken . '(' funcCallArgs ')'
   36           | idToken .

    '='  shift, and go to state 33
    '('  shift, and go to state 34

    intTypeToken     reduce using rule 20 (listVars)
    intTypeToken     [reduce using rule 36 (expression)]
    doubleTypeToken  reduce using rule 20 (listVars)
    doubleTypeToken  [reduce using rule 36 (expression)]
    returnToken      reduce using rule 20 (listVars)
    returnToken      [reduce using rule 36 (expression)]
    ifToken          reduce using rule 20 (listVars)
    ifToken          [reduce using rule 36 (expression)]
    idToken          reduce using rule 20 (listVars)
    idToken          [reduce using rule 36 (expression)]
    intToken         reduce using rule 20 (listVars)
    intToken         [reduce using rule 36 (expression)]
    doubleToken      reduce using rule 20 (listVars)
    doubleToken      [reduce using rule 36 (expression)]
    ','              reduce using rule 20 (listVars)
    ','              [reduce using rule 36 (expression)]
    '}'              reduce using rule 20 (listVars)
    '}'              [reduce using rule 36 (expression)]
    $default         reduce using rule 36 (expression)


State 20

   37 expression: intToken .

    $default  reduce using rule 37 (expression)


State 21

   38 expression: doubleToken .

    $default  reduce using rule 38 (expression)


State 22

   18 declaration: type . listVars

    idToken      shift, and go to state 35
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    listVars    go to state 36
    expression  go to state 37


State 23

    8 block: '{' statements . '}'
    9 statements: statements . statement

    intTypeToken     shift, and go to state 1
    doubleTypeToken  shift, and go to state 2
    returnToken      shift, and go to state 17
    ifToken          shift, and go to state 18
    idToken          shift, and go to state 19
    intToken         shift, and go to state 20
    doubleToken      shift, and go to state 21
    '}'              shift, and go to state 38

    type         go to state 22
    statement    go to state 39
    declaration  go to state 25
    listVars     go to state 26
    expression   go to state 27


State 24

   10 statements: statement .

    $default  reduce using rule 10 (statements)


State 25

   11 statement: declaration . ';'

    ';'  shift, and go to state 40


State 26

   12 statement: listVars .
   19 listVars: listVars . ',' idToken
   22         | listVars . ',' expression
   23         | listVars . ',' idToken '=' expression

    ','  shift, and go to state 41

    $default  reduce using rule 12 (statement)


State 27

   14 statement: expression . ';'
   21 listVars: expression .
   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    gteqToken  shift, and go to state 42
    lteqToken  shift, and go to state 43
    eqToken    shift, and go to state 44
    neqToken   shift, and go to state 45
    ';'        shift, and go to state 46
    '>'        shift, and go to state 47
    '<'        shift, and go to state 48
    '+'        shift, and go to state 49
    '-'        shift, and go to state 50
    '*'        shift, and go to state 51
    '/'        shift, and go to state 52

    $default  reduce using rule 21 (listVars)


State 28

    6 funcParameters: funcParameters ',' type . idToken

    idToken  shift, and go to state 53


State 29

    2 mainFunction: type mainToken '(' funcParameters ')' block .

    $default  reduce using rule 2 (mainFunction)


State 30

   35 expression: idToken . '(' funcCallArgs ')'
   36           | idToken .

    '('  shift, and go to state 34

    $default  reduce using rule 36 (expression)


State 31

   15 statement: returnToken expression . ';'
   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    gteqToken  shift, and go to state 42
    lteqToken  shift, and go to state 43
    eqToken    shift, and go to state 44
    neqToken   shift, and go to state 45
    ';'        shift, and go to state 54
    '>'        shift, and go to state 47
    '<'        shift, and go to state 48
    '+'        shift, and go to state 49
    '-'        shift, and go to state 50
    '*'        shift, and go to state 51
    '/'        shift, and go to state 52


State 32

   16 statement: ifToken '(' . expression ')' block
   17          | ifToken '(' . expression ')' block elseToken block

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 55


State 33

   13 statement: idToken '=' . expression ';'
   24 listVars: idToken '=' . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 56


State 34

   35 expression: idToken '(' . funcCallArgs ')'

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    $default  reduce using rule 41 (funcCallArgs)

    expression    go to state 57
    funcCallArgs  go to state 58


State 35

   20 listVars: idToken .
   24         | idToken . '=' expression
   35 expression: idToken . '(' funcCallArgs ')'
   36           | idToken .

    '='  shift, and go to state 59
    '('  shift, and go to state 34

    ';'       reduce using rule 20 (listVars)
    ';'       [reduce using rule 36 (expression)]
    ','       reduce using rule 20 (listVars)
    ','       [reduce using rule 36 (expression)]
    $default  reduce using rule 36 (expression)


State 36

   18 declaration: type listVars .
   19 listVars: listVars . ',' idToken
   22         | listVars . ',' expression
   23         | listVars . ',' idToken '=' expression

    ','  shift, and go to state 41

    $default  reduce using rule 18 (declaration)


State 37

   21 listVars: expression .
   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    gteqToken  shift, and go to state 42
    lteqToken  shift, and go to state 43
    eqToken    shift, and go to state 44
    neqToken   shift, and go to state 45
    '>'        shift, and go to state 47
    '<'        shift, and go to state 48
    '+'        shift, and go to state 49
    '-'        shift, and go to state 50
    '*'        shift, and go to state 51
    '/'        shift, and go to state 52

    $default  reduce using rule 21 (listVars)


State 38

    8 block: '{' statements '}' .

    $default  reduce using rule 8 (block)


State 39

    9 statements: statements statement .

    $default  reduce using rule 9 (statements)


State 40

   11 statement: declaration ';' .

    $default  reduce using rule 11 (statement)


State 41

   19 listVars: listVars ',' . idToken
   22         | listVars ',' . expression
   23         | listVars ',' . idToken '=' expression

    idToken      shift, and go to state 60
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 61


State 42

   31 expression: expression gteqToken . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 62


State 43

   32 expression: expression lteqToken . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 63


State 44

   33 expression: expression eqToken . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 64


State 45

   34 expression: expression neqToken . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 65


State 46

   14 statement: expression ';' .

    $default  reduce using rule 14 (statement)


State 47

   29 expression: expression '>' . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 66


State 48

   30 expression: expression '<' . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 67


State 49

   25 expression: expression '+' . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 68


State 50

   26 expression: expression '-' . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 69


State 51

   27 expression: expression '*' . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 70


State 52

   28 expression: expression '/' . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 71


State 53

    6 funcParameters: funcParameters ',' type idToken .

    $default  reduce using rule 6 (funcParameters)


State 54

   15 statement: returnToken expression ';' .

    $default  reduce using rule 15 (statement)


State 55

   16 statement: ifToken '(' expression . ')' block
   17          | ifToken '(' expression . ')' block elseToken block
   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    gteqToken  shift, and go to state 42
    lteqToken  shift, and go to state 43
    eqToken    shift, and go to state 44
    neqToken   shift, and go to state 45
    '>'        shift, and go to state 47
    '<'        shift, and go to state 48
    '+'        shift, and go to state 49
    '-'        shift, and go to state 50
    '*'        shift, and go to state 51
    '/'        shift, and go to state 52
    ')'        shift, and go to state 72


State 56

   13 statement: idToken '=' expression . ';'
   24 listVars: idToken '=' expression .
   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    gteqToken  shift, and go to state 42
    lteqToken  shift, and go to state 43
    eqToken    shift, and go to state 44
    neqToken   shift, and go to state 45
    ';'        shift, and go to state 73
    '>'        shift, and go to state 47
    '<'        shift, and go to state 48
    '+'        shift, and go to state 49
    '-'        shift, and go to state 50
    '*'        shift, and go to state 51
    '/'        shift, and go to state 52

    $default  reduce using rule 24 (listVars)


State 57

   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression
   40 funcCallArgs: expression .

    gteqToken  shift, and go to state 42
    lteqToken  shift, and go to state 43
    eqToken    shift, and go to state 44
    neqToken   shift, and go to state 45
    '>'        shift, and go to state 47
    '<'        shift, and go to state 48
    '+'        shift, and go to state 49
    '-'        shift, and go to state 50
    '*'        shift, and go to state 51
    '/'        shift, and go to state 52

    $default  reduce using rule 40 (funcCallArgs)


State 58

   35 expression: idToken '(' funcCallArgs . ')'
   39 funcCallArgs: funcCallArgs . ',' expression

    ','  shift, and go to state 74
    ')'  shift, and go to state 75


State 59

   24 listVars: idToken '=' . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 76


State 60

   19 listVars: listVars ',' idToken .
   23         | listVars ',' idToken . '=' expression
   35 expression: idToken . '(' funcCallArgs ')'
   36           | idToken .

    '='  shift, and go to state 77
    '('  shift, and go to state 34

    intTypeToken     reduce using rule 19 (listVars)
    intTypeToken     [reduce using rule 36 (expression)]
    doubleTypeToken  reduce using rule 19 (listVars)
    doubleTypeToken  [reduce using rule 36 (expression)]
    returnToken      reduce using rule 19 (listVars)
    returnToken      [reduce using rule 36 (expression)]
    ifToken          reduce using rule 19 (listVars)
    ifToken          [reduce using rule 36 (expression)]
    gteqToken        reduce using rule 36 (expression)
    lteqToken        reduce using rule 36 (expression)
    eqToken          reduce using rule 36 (expression)
    neqToken         reduce using rule 36 (expression)
    idToken          reduce using rule 19 (listVars)
    idToken          [reduce using rule 36 (expression)]
    intToken         reduce using rule 19 (listVars)
    intToken         [reduce using rule 36 (expression)]
    doubleToken      reduce using rule 19 (listVars)
    doubleToken      [reduce using rule 36 (expression)]
    ';'              reduce using rule 19 (listVars)
    ';'              [reduce using rule 36 (expression)]
    ','              reduce using rule 19 (listVars)
    ','              [reduce using rule 36 (expression)]
    '>'              reduce using rule 36 (expression)
    '<'              reduce using rule 36 (expression)
    '+'              reduce using rule 36 (expression)
    '-'              reduce using rule 36 (expression)
    '*'              reduce using rule 36 (expression)
    '/'              reduce using rule 36 (expression)
    '}'              reduce using rule 19 (listVars)
    '}'              [reduce using rule 36 (expression)]
    $default         reduce using rule 19 (listVars)


State 61

   22 listVars: listVars ',' expression .
   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    gteqToken  shift, and go to state 42
    lteqToken  shift, and go to state 43
    eqToken    shift, and go to state 44
    neqToken   shift, and go to state 45
    '>'        shift, and go to state 47
    '<'        shift, and go to state 48
    '+'        shift, and go to state 49
    '-'        shift, and go to state 50
    '*'        shift, and go to state 51
    '/'        shift, and go to state 52

    $default  reduce using rule 22 (listVars)


State 62

   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   31           | expression gteqToken expression .
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    '+'  shift, and go to state 49
    '-'  shift, and go to state 50
    '*'  shift, and go to state 51
    '/'  shift, and go to state 52

    $default  reduce using rule 31 (expression)


State 63

   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   32           | expression lteqToken expression .
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    '+'  shift, and go to state 49
    '-'  shift, and go to state 50
    '*'  shift, and go to state 51
    '/'  shift, and go to state 52

    $default  reduce using rule 32 (expression)


State 64

   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   33           | expression eqToken expression .
   34           | expression . neqToken expression

    gteqToken  shift, and go to state 42
    lteqToken  shift, and go to state 43
    '>'        shift, and go to state 47
    '<'        shift, and go to state 48
    '+'        shift, and go to state 49
    '-'        shift, and go to state 50
    '*'        shift, and go to state 51
    '/'        shift, and go to state 52

    $default  reduce using rule 33 (expression)


State 65

   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression
   34           | expression neqToken expression .

    gteqToken  shift, and go to state 42
    lteqToken  shift, and go to state 43
    '>'        shift, and go to state 47
    '<'        shift, and go to state 48
    '+'        shift, and go to state 49
    '-'        shift, and go to state 50
    '*'        shift, and go to state 51
    '/'        shift, and go to state 52

    $default  reduce using rule 34 (expression)


State 66

   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   29           | expression '>' expression .
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    '+'  shift, and go to state 49
    '-'  shift, and go to state 50
    '*'  shift, and go to state 51
    '/'  shift, and go to state 52

    $default  reduce using rule 29 (expression)


State 67

   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   30           | expression '<' expression .
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    '+'  shift, and go to state 49
    '-'  shift, and go to state 50
    '*'  shift, and go to state 51
    '/'  shift, and go to state 52

    $default  reduce using rule 30 (expression)


State 68

   25 expression: expression . '+' expression
   25           | expression '+' expression .
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    '*'  shift, and go to state 51
    '/'  shift, and go to state 52

    $default  reduce using rule 25 (expression)


State 69

   25 expression: expression . '+' expression
   26           | expression . '-' expression
   26           | expression '-' expression .
   27           | expression . '*' expression
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    '*'  shift, and go to state 51
    '/'  shift, and go to state 52

    $default  reduce using rule 26 (expression)


State 70

   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   27           | expression '*' expression .
   28           | expression . '/' expression
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    $default  reduce using rule 27 (expression)


State 71

   25 expression: expression . '+' expression
   26           | expression . '-' expression
   27           | expression . '*' expression
   28           | expression . '/' expression
   28           | expression '/' expression .
   29           | expression . '>' expression
   30           | expression . '<' expression
   31           | expression . gteqToken expression
   32           | expression . lteqToken expression
   33           | expression . eqToken expression
   34           | expression . neqToken expression

    $default  reduce using rule 28 (expression)


State 72

   16 statement: ifToken '(' expression ')' . block
   17          | ifToken '(' expression ')' . block elseToken block

    '{'  shift, and go to state 12

    block  go to state 78


State 73

   13 statement: idToken '=' expression ';' .

    $default  reduce using rule 13 (statement)


State 74

   39 funcCallArgs: funcCallArgs ',' . expression

    idToken      shift, and go to state 30
    intToken     shift, and go to state 20
    doubleToken  shift, and go to state 21

    expression  go to state 79


State 75

   35 expression: idToken '(' funcCallArgs ')' .

    $default  reduce using rule 35 (expression)


State 76
